Closed Bug 290048 Opened 21 years ago Closed 21 years ago

new bug to update <svg:use> attribute

Categories

(Core :: SVG, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: gwendal.mousset, Assigned: tor)

References

Details

(Keywords: regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050411 Firefox/1.0+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050411 Firefox/1.0+ Hello, I find a new bug with firefox 1.0+ rv:1.8b2 Gecko/20050411. Reproducible: Always Steps to Reproduce: 1.I've the following SVG code : ... <rect width="105" height="10" x="365" y="0" style="stroke:#000;" id="rect1" /> <use x="-105" y="0" xlink:href="#rect1" style="fill-opacity:0.75" id="rect2" /> <use x="-210" y="0" xlink:href="#rect1" style="fill-opacity:0.50" id="rect3" /> <use x="-315" y="0" xlink:href="#rect1" style="fill-opacity:0.25" id="rect4" /> ... 2. And I try to update an attribute value with javascript : ... global_legende.getElementById("rect1").style.setProperty("fill", color, "") ; ... 3. Actual Results: The color change for the <rect> element, but not for the <use> elements. Expected Results: With a previous release (1.8b2 20050320) this code works perfectly.
*** Bug 290049 has been marked as a duplicate of this bug. ***
Keywords: regression
Version: unspecified → Trunk
Could you post a testcase please.
Component: General → JavaScript Engine
Product: Firefox → Core
(In reply to comment #2) > Could you post a testcase please. Yes, I realized a simple example : http://gwendal.mousset.free.fr/svgTest/colorTest.xhtml The result is different : color change but it's not correct yet. The new color seems te be mixed with the older... With my previous firefox release it works well.
Attached file testcase
(In reply to comment #4) > Created an attachment (id=180560) [edit] > testcase > Sorry, this link doesn't work... the svg isn't display. Maybe text/html is not the appropriate content type for xhtml file with svg. Download the file to test.
Attachment #180560 - Attachment mime type: text/html → text/xhtml
Attachment #180560 - Attachment mime type: text/xhtml → text/plain
Attachment #180560 - Attachment mime type: text/plain → text/xml
The test case does not work for me neither.
Assignee: firefox → general
Component: JavaScript Engine → SVG
*** Bug 290320 has been marked as a duplicate of this bug. ***
Remove nsSVGUseFrame::Init since we don't need to do anything special for <use> and the current one doesn't call the base ::Init, which means we won't eventually end up in nsFrame::Init to set the flag on the use content that it has a frame.
Assignee: general → tor
Status: UNCONFIRMED → ASSIGNED
Attachment #181824 - Flags: review?(scootermorris)
Attachment #181824 - Flags: review?(scootermorris) → review+
Attachment #181824 - Flags: approval1.8b2?
Comment on attachment 181824 [details] [diff] [review] remove nsSVGUseFrame::Init a=asa
Attachment #181824 - Flags: approval1.8b2? → approval1.8b2+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
It works, thanks a lot ;)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: