Bug 290048 - change of <svg:use> attribute not shown.  r=scooter, a=asa.